Updated outlook.office.com Fixes: fixed one scrollbar in Calendar

--- a/office.com/outlook/fix.user.css
+++ b/office.com/outlook/fix.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           outlook.office.com Fixes
 @description    Userstyle for outlook.office.com
-@version        0.0.3
+@version        0.0.4
 @author         Boian Berberov (https://github.com/bberberov)
 @license        EUPL-1.2
 @namespace      https://github.com/bberberov/userweb
@@ -25,5 +25,14 @@
 	{
 		scrollbar-color: unset !important;
 		scrollbar-width: unset !important;
+	}
+}
+
+@-moz-document
+	url-prefix("https://outlook.office.com/calendar/")
+{
+	.c0Y9bLG-2zWj7ckL3tCLI	{
+		scrollbar-color: unset;
+		scrollbar-width: unset;
 	}
 }
